MINOR - z-index wasnt correct for the Toggle Sidebar Button, fixed that

--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ section:last-child {
     position: fixed;
     bottom: 2vw;
     right: 1vw; 
-    z-index: 2;
+    z-index: 3;
     min-width: 150px;
     max-width: 150px;
 }
